--- a/vignettes/DGE.ToolsPlotGallery.Rmd
+++ b/vignettes/DGE.ToolsPlotGallery.Rmd
@@ -335,10 +335,10 @@ Input can be a DGEobj or a raw counts matrix.  Output can be a canvasXpress or g
 Default plot type is a canvasXpress and default plot category is box plot.
 
 ```
-boxNorm <- plotNorm(dgeObj, plotCategory = "box", normalize = "tmm")
+boxNorm <- plotNorm(dgeObj, plotType = "canvasXpress", plotCategory = "box", normalize = "tmm")
 printAndSave(boxNorm, file.path(outputPath, "boxNorm.png"))
 
-densityNorm <- plotNorm(dgeObj, plotCategory = "density", normalize = "tmm")
+densityNorm <- plotNorm(dgeObj, plotType = "ggplot", plotCategory = "density", normalize = "tmm")
 printAndSave(densityNorm, file.path(outputPath, "densityNorm.png"))
 ```
 
